Tue Jun  7 18:15:00 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_set_program_name):
	  should show some messages when skippning tests.

Tue Jun  7 13:59:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_core.c (date_s_today, datetime_s_now): check the
	  result of localtime_r().

Tue Jun  7 13:36:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/extconf.rb: use $defs not $CPPFLAGS to get rid of
	  command line escape issues on Windows.  fixed #4835.

Tue Jun  7 03:18:45 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_io.rb (TestIO#test_s_{,bin}write): do not create a
	  file under /tmp. [Bug #4846]

Mon Jun  6 22:51:43 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* cont.c: use #if FIBER_USE_NATIVE instead of #ifdef.
	  you can suppress use of setcontext for Fiber with compile option
	  -DFIBER_USE_NATIVE=0

Mon Jun  6 21:59:23 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/test_switch_hitter.rb: added a test.

Mon Jun  6 21:37:45 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: added notes.

Mon Jun  6 21:02:12 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: flattened format to strftimev.
	* ext/date/date_core.c (date_strftime_internal): taints run.

Mon Jun  6 15:10:17 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/{defines,missing}.h (rb_infinity, rb_nan): move from
	  defines.h to missing.h.  (couldn't use RUBY_EXTERN there.)

Mon Jun  6 14:35:48 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rdoc/test_rdoc_markup_pre_process.rb (TestRDocMarkupPreProcess#
	  {test_include_file,test_include_file_encoding_incompatible}): no
	  need to write such workaround.  don't hide the bug of ruby. (and the
	  bug is already fixed.)

Mon Jun  6 14:11:11 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/date/date_core.c (valid_jd_sub): need to convert from VALUE to
	  double.
